// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeTable RowWrapper should render correctly - no data 1`] = `
<RowWrapper
  aria-level={1}
  aria-setsize={0}
  className=""
  row={
    {
      "isEditable": undefined,
      "isExpanded": undefined,
      "isHeightAuto": undefined,
      "isOpen": undefined,
    }
  }
  rowProps={null}
/>
`;

exports[`TreeTable RowWrapper should render correctly - with data 1`] = `
<RowWrapper
  aria-level={1}
  aria-posinset={1}
  aria-setsize={2}
  className="pf-m-expandable pf-m-expanded"
  row={
    {
      "isTreeOpen": true,
      "level": 0,
      "point": {
        "size": 2,
      },
      "posinset": 1,
    }
  }
  rowProps={null}
/>
`;

exports[`TreeTable RowWrapper should render correctly - with data collapsed 1`] = `
<RowWrapper
  aria-level={1}
  aria-posinset={1}
  aria-setsize={2}
  className="pf-m-expandable"
  row={
    {
      "isTreeOpen": false,
      "level": 0,
      "point": {
        "size": 2,
      },
      "posinset": 1,
    }
  }
  rowProps={null}
/>
`;
